@@ -550,6 +550,16 @@ dc1394_capture_setup(dc1394camera_t *camera, uint32_t num_dma_buffers, uint32_t 
 
   cmsw->capture_flags=flags;
 
+  // if auto iso is requested, stop ISO (if necessary)
+  if (flags & DC1394_CAPTURE_FLAGS_AUTO_ISO) {
+    dc1394switch_t is_iso_on;
+    dc1394_video_get_transmission(camera, &is_iso_on);
+    if (is_iso_on == DC1394_ON) {
+      err=dc1394_video_set_transmission(camera, DC1394_OFF);
+      DC1394_ERR_RTN(err,"Could not stop ISO!");
+    }
+  }
+
   // allocate channel/bandwidth if requested
   if (flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) {
     err=dc1394_allocate_iso_channel(camera);
@@ -593,7 +603,14 @@ dc1394_capture_setup(dc1394camera_t *camera, uint32_t num_dma_buffers, uint32_t 
     f->image = (unsigned char *) cmsw->ISO.Buffers[i];
     f->id = i;
   }
-  camera->capture_is_set = 2;
+  camera->capture_is_set = 1;
+
+  // if auto iso is requested, start ISO
+  if (flags & DC1394_CAPTURE_FLAGS_AUTO_ISO) {
+    err=dc1394_video_set_transmission(camera, DC1394_ON);
+    DC1394_ERR_RTN(err,"Could not start ISO!");
+  }
+
   return DC1394_SUCCESS;
 
 fail:
